fixed more of the login and registration popup. Cleared code whitespace.

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,8 @@
   height: 100vh;
   position: relative;
   background-color: #2c6be9;
-  color: white;
+  color: white;  
+  transition: 3s;
 }
 
 .background-image-login {
@@ -59,6 +60,7 @@
   position: relative;
   background-color: #8d98ac;
   color: white;
+  transition: 3s;
 }
 
 button {
@@ -96,7 +98,7 @@ button {
   /* float: right; */
   position: absolute;
   top: 0;
-  right: 5%;
+  right: 5.7%;
   margin: .25rem;
   padding: 0.25rem;
   text-decoration: none;
@@ -107,27 +109,11 @@ button {
   transition: 0.1s;
 }
 
-.login-button {
-  /* float: right;
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: .25rem;
-  padding: 0.25rem;
-  text-decoration: none;
-  border-radius: 15px;
-  font-size: 1em;
-  color: firebrick;
-  border: 2px solid firebrick;
-  transition: 0.1s; */
-}
-
 .login:hover,
 .login:active {
   color: tomato;
   border: 2px solid tomato;
 }
-
 
 .merch-links {
   background-color: rgb(0, 4, 255);
@@ -155,6 +141,7 @@ button {
   left: 91%;
   transform: translate(-50%, -50%);
   background-color: #18a848;
+  padding: 5px;
 }
 
 .movie-item {
@@ -180,7 +167,8 @@ nav a {
   font-size: 1.2em;
   color: firebrick;
   border-bottom: 2px solid firebrick;
-  transition: 0.1s;
+  
+  transition: 3s;
 }
 
 nav a:hover,
@@ -192,6 +180,24 @@ nav a:active {
 nav a.active {
   color: white;
   background: tomato;
+}
+
+.new-user-button {
+  border-radius: 15px;
+  font-size: 12px;
+  color: firebrick;
+  border: 1px solid firebrick;
+}
+
+.please {
+  /* float: right; */
+  /* display: inline-block; */
+  position: absolute;
+  top: 45%;
+  left: 45%;
+  /* transform: translate(-50%, -50%); */
+  font-size: 3vw;
+  /* width: 50x */
 }
 
 .search {
@@ -211,8 +217,20 @@ nav a.active {
 .show-button {  
   position: absolute;
   color:#7010ac;
-  top: 24px;
-  right: 3px;
+  top: 28px;
+  right: 8px;
+  font-size: 10px;
+  display: flex
+}
+
+.user-signup {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #18a848;
+  padding: 5px;
+  text-align: center;
 }
 
 
